# MyOpenGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
libs/: CMakeLists.txt
src/: BasicRenderer.cpp  BasicRenderer.h  Camera.cpp  Camera.h  EventListener.h  Renderer.h  Utils.cpp  Utils.h  WindowManager.cpp  WindowManager.h  main.cpp
src/renderers/: BasicRenderer.cpp  BasicRenderer.h  BasicShaders.cpp  BasicShaders.h  Renderer.cpp  Renderer.h  StaticRenderer.cpp  StaticRenderer.h  StaticShaders.cpp  StaticShaders.h
